<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommentsFragment">

    <TextView
        android:id="@+id/comment_title_text_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/comment_title_text_view"
        android:textAlignment="center"
        android:textColor="#EF476F"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comment_message_text_view"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/comment_message_text_view"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/comment_title_text_view"
        app:layout_constraintStart_toStartOf="@+id/comment_title_text_view"
        app:layout_constraintTop_toBottomOf="@+id/comment_title_text_view" />

    <TextView
        android:id="@+id/rate_text_view"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/rate_text_view"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/comment_message_text_view"
        app:layout_constraintStart_toStartOf="@+id/comment_message_text_view"
        app:layout_constraintTop_toBottomOf="@+id/comment_message_text_view" />

    <LinearLayout
        android:id="@+id/ratingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/rate_text_view"
        app:layout_constraintStart_toStartOf="@+id/rate_text_view"
        app:layout_constraintTop_toBottomOf="@+id/rate_text_view">

        <ImageButton
            android:id="@+id/star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/star_1"
            android:src="@drawable/ic_star_empty" />

        <ImageButton
            android:id="@+id/star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/star_2"
            android:src="@drawable/ic_star_empty" />

        <ImageButton
            android:id="@+id/star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/star_3"
            android:src="@drawable/ic_star_empty" />

        <ImageButton
            android:id="@+id/star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/star_4"
            android:src="@drawable/ic_star_empty" />

        <ImageButton
            android:id="@+id/star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/star_5"
            android:src="@drawable/ic_star_empty" />
    </LinearLayout>

    <EditText
        android:id="@+id/feedback_edit_text"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/feedback_edit_text"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/ratingLayout"
        app:layout_constraintStart_toStartOf="@+id/ratingLayout"
        app:layout_constraintTop_toBottomOf="@+id/ratingLayout" />

    <Button
        android:id="@+id/add_feedback_button"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_feedback_button"
        style="@style/ButtonStyle"
        app:layout_constraintEnd_toEndOf="@+id/feedback_edit_text"
        app:layout_constraintStart_toStartOf="@+id/feedback_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/feedback_edit_text" />

    <ScrollView
        android:id="@+id/reviewsScrollView"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/add_feedback_button"
        app:layout_constraintStart_toStartOf="@+id/add_feedback_button"
        app:layout_constraintTop_toBottomOf="@+id/add_feedback_button"
        android:contentDescription="@string/scrollview_content_description">

        <LinearLayout
            android:id="@+id/reviewsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <!-- Dynamically generated TextViews will be added here -->

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>