<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllTipsFragment">

    <TextView
        android:id="@+id/all_tips_title_text_view"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:padding="8dp"
        android:text="@string/all_tips_title_text_view"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/all_tips_message_text_view"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/all_tips_message_text_view"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/all_tips_title_text_view"
        app:layout_constraintStart_toStartOf="@+id/all_tips_title_text_view"
        app:layout_constraintTop_toBottomOf="@id/all_tips_title_text_view" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/all_tips_message_text_view"
        app:layout_constraintStart_toStartOf="@+id/all_tips_message_text_view"
        app:layout_constraintTop_toBottomOf="@id/all_tips_message_text_view"
        android:contentDescription="@string/scrollview_content_description">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <Button
        android:id="@+id/podcast_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:padding="16dp"
        android:text="@string/podcast_button"
        android:layout_marginTop="20dp"
        style="@style/ButtonStyle"
        app:layout_constraintEnd_toEndOf="@+id/scrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>